[package]
name = "wisp"
version = "0.1.0"
edition = "2021"
authors = ["Andriy Buday"]
description = "A minimalist terminal emulator"
license = "MIT"

[dependencies]
# UI Framework - using winit for cross-platform window creation
winit = "0.29"
# GPU rendering with wgpu
wgpu = "0.18"
# Font rendering
fontdue = "0.8"
# PTY handling
portable-pty = "0.8"
# ANSI parser
vte = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
